feat: add opengraph

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -12,6 +12,18 @@
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
 
+    <meta property="og:title" content="<%= productName %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nigui.fr" />
+    <meta property="og:image" content="https://nigui.fr/img/opengraph.png" />
+    <meta property="og:image:alt" content="<%= productName %> opengraph" />
+    <meta property="og:description" content="<%= productDescription %>" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@GuiillaumeN" />
+    <meta name="twitter:creator" content="@GuiillaumeN" />
+    <meta name="twitter:image" content="https://nigui.fr/img/opengraph.png" />
+    <meta name="twitter:image:alt" content="<%= productName %> twitter card" />
+
     <link
       rel="icon"
       type="image/png"
