--- a/src/index.template.html
+++ b/src/index.template.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta
       name="viewport"
-      content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
+      content="initial-scale=1, maximum-scale=5, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
 
     <meta property="og:title" content="<%= productName %>" />
@@ -26,27 +26,27 @@
 
     <link
       rel="icon"
-      type="image/png"
+      type="image/webp"
       sizes="128x128"
-      href="icons/favicon-128x128.png"
+      href="icons/favicon-128x128.webp"
     />
     <link
       rel="icon"
-      type="image/png"
+      type="image/webp"
       sizes="96x96"
-      href="icons/favicon-96x96.png"
+      href="icons/favicon-96x96.webp"
     />
     <link
       rel="icon"
-      type="image/png"
+      type="image/webp"
       sizes="32x32"
-      href="icons/favicon-32x32.png"
+      href="icons/favicon-32x32.webp"
     />
     <link
       rel="icon"
-      type="image/png"
+      type="image/webp"
       sizes="16x16"
-      href="icons/favicon-16x16.png"
+      href="icons/favicon-16x16.webp"
     />
     <link rel="icon" type="image/ico" href="favicon.ico" />
 
